# A-_public_opinion_development_system_based_on_Python.

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE.md  README.md  TODO.md  app.py  append_api.py  bandit-report.json  best_sentiment_model.pkl  check_database.py  dem.py  docker-compose.yml  environment.yml  fix_403_quick.py  fix_public_data.py  navData.csv  pip-audit-report.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.audit.txt  requirements.txt  run.py  run_migration.py  safe_spider_config.txt  start.bat  start_dev.bat  stop.bat  test_cookie.py  test_spider_system.py  word_cloud_picture.py  配置过程.md  配置过程.txt
.claude/: settings.local.json
cache/: getAllCiPingTotal_e517fb10adc90f5b727c5d734fd63ebc.cache  getAllCommentsData_e517fb10adc90f5b727c5d734fd63ebc.cache  getAllData_e517fb10adc90f5b727c5d734fd63ebc.cache
data/: search.db
database/: database_indexes.sql  new.sql  optimize_indexes.sql
docs/: API.md  ARCHITECTURE.md  CDN配置指南.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  FILE_REORGANIZATION.md  FIX_LOG.md  FIX_LOG_FINAL.md  IMPROVEMENTS_SUMMARY.md  PATH_MIGRATION_SUMMARY.md  REVIEW_AND_IMPROVEMENTS.md  TODO.md  情感突变检测算法文献综述.md  整改执行清单.md  预警通知服务需求分析.md
frontend/: .env.development  .env.production  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  start.bat  vite.config.js
model/: MODEL_FIX_SUMMARY.md  best_sentiment_model.pkl  ciPingTotal.py  comment_1_fenci.txt  comment_1_fenci_qutingyongci_cipin.csv  index.py  target.csv  trainModel.py
nlp_service/: Dockerfile  celery_app.py  requirements.txt
scripts/: check_env.py  dem.py  deploy.py  start-all.bat  start-frontend.bat  word_cloud_picture.py
spider/: commentsData.csv  config.py  demo.py  main.py  spiderComments.py  spiderContent.py  spiderMaster.py  spiderNav.py  spiderUserInfo.py  userInfo.csv
spider_service/: Dockerfile  celery_app.py  requirements.txt
src/: app.py  database.py  test_api_new.py
templates/: 404.html  error.html
tests/: check_database.py  conftest.py  fix_403_error.py  fix_403_quick.py  test_alert_history.py  test_alert_service.py  test_api_response.py  test_auth_jwt.py  test_authz.py  test_celery_spider_events.py  test_chart_renderer.py  test_collaboration.py  test_cookie.py  test_data_api_helpers.py  test_db.py  test_domain_events.py  test_model_pipeline.py  test_nlp_task_service.py  test_notification_service.py  test_platform_collector.py  test_propagation.py  test_propagation_service.py  test_report_api_data.py  test_report_charts.py  test_report_template.py  test_s10_db.py  test_s11_task_api.py  test_search.py  test_search_service.py  test_security_hardening.py  test_sentiment_model.py  test_threshold.py  (+10 more)
(+251 files in other folders)
